--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -44,8 +44,8 @@ html, body, #container {
 <body>
 <div class="container">
     <div class="row" style="width:900px;">
-        <div class="column" id="location" style="width:600px;height:200px">{{ location }}</div>
-        <div class="column" id="timediff" style="width:300px;height:200px">{{ timedelta }} seconds ago</div>
+        <div class="column" id="location" style="align:center;width:600px;height:20px">{{ location }}</div>
+        <div class="column" id="timediff" style="align:center;width:300px;height:20px">{{ timedelta }} seconds ago</div>
     </div>
 
     <div class="row" style="width:900px;">
