--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -44,10 +44,9 @@ html, body, #container {
 <body>
 <div class="container">
     <div class="row" style="width:900px;">
-        <div class="column" id="location" style="align:center;width:600px;height:20px">{{ location }}</div>
-        <div class="column" id="timediff" style="align:center;width:300px;height:20px">{{ timedelta }} seconds ago</div>
+        <div class="column" id="location" style="text-align:center;width:600px;height:20px">{{ location }}</div>
+        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px">{{ timedelta }} ago</div>
     </div>
-
     <div class="row" style="width:900px;">
         <div class="column" id="container_1" style="width:600px;height:200px"></div>
         <div class="column" id="speed_1" style="width:300px;height:200px"></div>
