--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -45,7 +45,7 @@ html, body, #container {
 <div class="container">
     <div class="row" style="width:900px;">
         <div class="column" id="location" style="text-align:center;width:600px;height:20px">{{ location }}</div>
-        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px">{{ timedelta }} ago</div>
+        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px">{{ timedelta }}</div>
     </div>
     <div class="row" style="width:900px;">
         <div class="column" id="container_1" style="width:600px;height:200px"></div>
