--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -44,8 +44,8 @@ html, body, #container {
 <body>
 <div class="container">
     <div class="row" style="width:900px;">
-        <div class="column" id="location" style="text-align:center;width:600px;height:20px"><h3>{{ location }}</h3></div>
-        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px"><h3>{{ timedelta }}</h3></div>
+        <div class="column" id="location" style="text-align:center;width:600px;height:20px">{{ location }}</div>
+        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px">{{ timediff }}</div>
     </div>
     <div class="row" style="width:900px;">
         <div class="column" id="container_1" style="width:600px;height:200px"></div>
