--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -68,7 +68,7 @@ anychart.onDocumentReady(function () {
     //var dataSet = anychart.data.set(data);    
     //var seriesData = new Array(numCharts);
     //var chart = new Array(numCharts);
-    //var chartSeries = new Array(numCharts)
+    var chartSeries = new Array(3)
     /*
     var gauges = new Array(seriesData.length)
     for (n=0; n<numCharts; n++) { 
