--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -119,7 +119,7 @@ anychart.onDocumentReady(function () {
     chart.tooltip().positionMode('point');
     chart.tooltip().titleFormat("time: {%x}{dateTimeFormat:HH:mm:ss}");
     // set chart title text settings
-    chart.title(chartdefs.charts[0]['title']);
+    chart.title("Temperature");
     // set yAxis title
     chart.yAxis().title(chartdefs.charts[0]['ylabel']);
     chart.xAxis().labels().padding(5)      
@@ -129,9 +129,9 @@ anychart.onDocumentReady(function () {
       var dataSet = anychart.data.set(data[n]);
       var seriesData = dataSet.mapAs({'x': 0, 'value': 1});
       chartSeries[n] = chart.line(seriesData);
-      //chartSeries[n].name(chartdefs.charts[n]['title']);
-      //chartSeries[n].hovered().markers().enabled(true).type('circle').size(4);
-      //chartSeries[n].tooltip().position('right').anchor('left-center').offsetX(5).offsetY(5);
+      chartSeries[n].name(chartdefs.charts[n]['title']);
+      chartSeries[n].hovered().markers().enabled(true).type('circle').size(4);
+      chartSeries[n].tooltip().position('right').anchor('left-center').offsetX(5).offsetY(5);
       chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
     }
     
