--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -62,7 +62,7 @@ anychart.onDocumentReady(function () {
     // data[node][][]
     // 3-dimensional array
     data = {{ data | safe }};
-    annotations = {{ annotations | safe }}
+    annotations = {{ annotations | safe }};
     chartdefs = {{ chartdefs | safe}};
     
     //var numCharts = chartdefs['charts'].length;
@@ -143,7 +143,7 @@ anychart.onDocumentReady(function () {
     var controller = plot.annotations();
     // create a Label annotation
     for (k=0; k<annotations.length; k++) {
-      controller.label({xAnchor: annotations[k][0], valueAnchor: annotations[k][1], text: annotations[k][2]});
+      controller.label({ xAnchor: annotations[k][0], valueAnchor: annotations[k][1], text: annotations[k][2] });
     }
     
     chart.container('container_1');      
