--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -138,7 +138,7 @@ anychart.onDocumentReady(function () {
       chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
     }
     
-    //var plot = chart.plot(0);
+    var plot = chart.plot(0);
     // access the annotations() object of the plot to work with annotations
     //var controller = plot.annotations();
     // create a Label annotation
