--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -141,10 +141,13 @@ anychart.onDocumentReady(function () {
     var plot = chart.plot();
     // access the annotations() object of the plot to work with annotations
     var controller = plot.annotations();
+    controller.horizontalLine({
+    valueAnchor: 75.0
+    });
     // create a Label annotation
-    for (k=0; k<annotations.length; k++) {
-      controller.label({ xAnchor: annotations[k][0], valueAnchor: annotations[k][1], text: annotations[k][2] });
-    }
+    //for (k=0; k<annotations.length; k++) {
+    //  controller.label({ xAnchor: annotations[k][0], valueAnchor: annotations[k][1], text: annotations[k][2] });
+    //}
     
     chart.container('container_1');      
     chart.draw(); 
