--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -138,12 +138,12 @@ anychart.onDocumentReady(function () {
       chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
     }
     
-    var plot = chart.plot();
+    //var plot = chart.plot();
     // access the annotations() object of the plot to work with annotations
-    var controller = plot.annotations();
-    controller.horizontalLine({
-    valueAnchor: 75.0
-    });
+    //var controller = plot.annotations();
+    //controller.horizontalLine({
+    //valueAnchor: 75.0
+    //});
     // create a Label annotation
     //for (k=0; k<annotations.length; k++) {
     //  controller.label({ xAnchor: annotations[k][0], valueAnchor: annotations[k][1], text: annotations[k][2] });
