--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -97,6 +97,11 @@ anychart.onDocumentReady(function () {
     chart = anychart.line();      
     chart.xAxis().ticks().enabled(true);
     chart.yAxis().ticks().enabled(false);
+    
+    var marker = chart.lineMarker();
+    marker.axis(chart.xAxis());
+    marker.value(75);
+    
     //work on the time axis
     var dateScale = anychart.scales.dateTime();
     // set one year ticks interval
@@ -138,10 +143,10 @@ anychart.onDocumentReady(function () {
       chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
     }
     
-    var plot = chart.plot();
+    //var plot = chart.plot();
     // access the annotations() object of the plot to work with annotations
-    var annotations = plot.annotations();
-    annotations.horizontalLine({valueAnchor: 75.0});
+    //var annotations = plot.annotations();
+    //annotations.horizontalLine({valueAnchor: 75.0});
     // create a Label annotation
     //for (k=0; k<annotations.length; k++) {
     //  controller.label({ xAnchor: annotations[k][0], valueAnchor: annotations[k][1], text: annotations[k][2] });
