--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -99,7 +99,7 @@ anychart.onDocumentReady(function () {
     chart.yAxis().ticks().enabled(false);
     
     var marker = chart.lineMarker();
-    marker.axis(chart.xAxis());
+    marker.axis(chart.yAxis());
     marker.value(75);
     
     //work on the time axis
