--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet">
   <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet"> 
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-circular-gauge.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-annotations.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
 <style type="text/css">
 html, body, #container {
     width: 100%;
@@ -97,7 +98,7 @@ anychart.onDocumentReady(function () {
     // create line chart
     chart = anychart.line();
     // access the annotations() object of the plot to work with annotations
-    var plot = chart.plot; 
+    var plot = chart.plot(0); 
     chart.xAxis().ticks().enabled(true);
     chart.yAxis().ticks().enabled(false);
     
