--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -110,7 +110,7 @@ anychart.onDocumentReady(function () {
     var controller = plot.annotations();
 
     // create a Label annotation
-    for (k=0; k<annotations.length; k++) {}
+    for (k=0; k<annotations.length; k++) {
       controller.label({
         xAnchor: annotations[k][0],
         valueAnchor: annotations[k][1],
