--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -97,7 +97,7 @@ anychart.onDocumentReady(function () {
     // create line chart
     chart = anychart.line();
     // access the annotations() object of the plot to work with annotations
-    var plot = chart.plot(0); 
+    var plot = chart.plot; 
     chart.xAxis().ticks().enabled(true);
     chart.yAxis().ticks().enabled(false);
     
