--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet"> 
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-circular-gauge.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-annotations.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/8.5.0/js/anychart-stock.min.js"</script>
 <style type="text/css">
 html, body, #container {
     width: 100%;
