--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -1,14 +1,15 @@
 {% load staticfiles %}                     
 <html>
 <head>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
-  <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet">
-  <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet"> 
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-circular-gauge.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-annotations.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
+  <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css" type="text/css" rel="stylesheet">
+  <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css" type="text/css" rel="stylesheet"> 
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-circular-gauge.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-annotations.min.js"></script>
   <script src="https://cdn.anychart.com/releases/8.5.0/js/anychart-stock.min.js"</script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-cartesian.min.js"></script>
 <style type="text/css">
 html, body, #container {
     width: 100%;
@@ -96,7 +97,7 @@ anychart.onDocumentReady(function () {
     */       
     //seriesData[n] = dataSet.mapAs({'x': 0, 'value': n+1});
     // create line chart
-    chart = anychart.stock(); //line();
+    chart = anychart.line();
     // access the annotations() object of the plot to work with annotations
     var plot = chart.plot(0); 
     chart.xAxis().ticks().enabled(true);
