--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -26,19 +26,11 @@
 </style>
 </head>
 <body>			
-  <div id="container">
-				
+  <div id="container">				
     <div class="container-title">
-					
-      <p>See also 
-        <a href="https://www.anychart.com/products/anystock/drawing_tools/">Drawing Tools and
-							Annotations Demo</a>
-      </p>
-				
     </div>
-			
   </div>
-  <script>
+<script>
 anychart.onDocumentReady(function () {
     data = {{ data | safe }};
     annotations = {{ annotations | safe }};
@@ -48,10 +40,8 @@ anychart.onDocumentReady(function () {
     // create data tables on loaded data
     var msftDataTable = anychart.data.table();
     msftDataTable.addData(get_msft_daily_short_data());
-
     var orclDataTable = anychart.data.table();
     orclDataTable.addData(get_orcl_daily_short_data());
-
     var cscoDataTable = anychart.data.table();
     cscoDataTable.addData(get_csco_daily_short_data());
     cscoDataTable.addData(get_empty_data());
@@ -65,10 +55,7 @@ anychart.onDocumentReady(function () {
     // create plot on the chart
     var plot = chart.plot();
     // grid settings
-    plot.yGrid(true)
-        .xGrid(true)
-        .xMinorGrid(true)
-        .yMinorGrid(true);
+    plot.yGrid(true).xGrid(true).xMinorGrid(true).yMinorGrid(true);
 
     // format legend items
     plot.legend().itemsFormatter(function (items) {
@@ -78,13 +65,13 @@ anychart.onDocumentReady(function () {
     });
     
     // create plot series with mapped data
-    var ORCL = plot.line(orclDataTable.mapAs({'value': 4}));
+    var ORCL = plot.line(orclDataTable.mapAs({'value': 3}));
     ORCL.name('ORCL').stroke('#3C8AD8');
     ORCL.tooltip().format(function () {
         return tooltipFormatter(this, false)
     });
 
-    var CSCO = plot.line(cscoDataTable.mapAs({'value': 4}));
+    var CSCO = plot.line(cscoDataTable.mapAs({'value': 2}));
     CSCO.name('CSCO').stroke('#96a6a6');
     CSCO.tooltip().format(function () {
         return tooltipFormatter(this, false)
