--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -64,6 +64,7 @@ anychart.onDocumentReady(function () {
         return items;
     });
     
+    /*
     // create plot series with mapped data
     var ORCL = plot.line(orclDataTable.mapAs({'x': 0, 'value': 4}));
     ORCL.name('ORCL').stroke('#3C8AD8');
@@ -76,12 +77,16 @@ anychart.onDocumentReady(function () {
     CSCO.tooltip().format(function () {
         return tooltipFormatter(this, false)
     });
+    */
     
     for (n=0; n<3; n++) {
       var dataSet = anychart.data.set(data[n]);
-      line[n] = plot.line(dataSet.mapAs({'value': 1}));
+      line[n] = plot.line(dataSet.mapAs({'x': 0, 'value': 1}));
       line[n].name(chartdefs.charts[n]['title']);
       line[n].stroke(chartdefs.charts[n]['linecolor']);
+      line[n].tooltip().format(function () {
+        return tooltipFormatter(this, false)
+      });
     }
 
     /*
