--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -81,8 +81,8 @@ anychart.onDocumentReady(function () {
     
     for (n=0; n<3; n++) {
       var dataSet = anychart.data.set(data[n]);
-      //line[n] = plot.line(dataSet.mapAs({'x': 0, 'value': 1}));
-      line[n] = plot.line(dataSet.mapAs());
+      line[n] = plot.line(dataSet.mapAs({'x': 0, 'value': 1}));
+      //line[n] = plot.line(dataSet.mapAs());
       line[n].name(chartdefs.charts[n]['title']);
       line[n].stroke(chartdefs.charts[n]['linecolor']);
       line[n].tooltip().format(function () {
