--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -83,8 +83,8 @@ anychart.onDocumentReady(function () {
     var dataSet = anychart.data.table(data[0]);
     var line = plot.line(dataSet.mapAs({'value': 1}));
       //line[n] = plot.line(dataSet.mapAs());
-    line.name(chartdefs.charts[0]['title']);
-    line.stroke(chartdefs.charts[0]['linecolor']);
+    line.name('title');
+    line.stroke('red');
     line.tooltip().format(function () {
         return tooltipFormatter(this, false)
     });
