--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -81,6 +81,7 @@ anychart.onDocumentReady(function () {
     
     //var dataSet = anychart.data.set(data[0]);
     var dataSet = anychart.data.table();
+    /*
     dataSet.addData([
 ['2016-01-01 10:46', 1.0860],
 ['2016-01-01 10:47', 1.0832],
@@ -88,6 +89,8 @@ anychart.onDocumentReady(function () {
 ['2016-01-01 10:49', 1.0781],
 ['2016-01-01 10:50', 1.0873]
   ]);
+  */
+    dataSet.addData(data[1]);
     var line = plot.line(dataSet.mapAs({'x': 0, 'value': 1}));
       //line[n] = plot.line(dataSet.mapAs());
     line.name('title');
