--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -103,11 +103,11 @@ anychart.onDocumentReady(function () {
     */
     for (n=0; n<3; n++) {
       dataSet.addData(data[n]);
-      var line = plot.line(dataSet.mapAs({'x': 0, 'value': 1}));
+      var line[n] = plot.line(dataSet.mapAs({'x': 0, 'value': 1}));
       //line[n] = plot.line(dataSet.mapAs());
-      line.name(chartdefs.charts[n]['title']);
-      line.stroke(chartdefs.charts[n]['linecolor']);
-      line.tooltip().format(function () {
+      line[n].name(chartdefs.charts[n]['title']);
+      line[n].stroke(chartdefs.charts[n]['linecolor']);
+      line[n].tooltip().format(function () {
         return tooltipFormatter(this, false)
       });
     }
