--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -36,7 +36,7 @@ anychart.onDocumentReady(function () {
     annotations = {{ annotations | safe }};
     chartdefs = {{ chartdefs | safe}};    
     var line = new Array(2);
-    var datasset = new Array(2)
+    var dataSet = new Array(2)
     
     // create data tables on loaded data
     var msftDataTable = anychart.data.table();
