--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -117,7 +117,7 @@ anychart.onDocumentReady(function () {
     }
     
     var eventMarkers = plot.eventMarkers();
-    eventMarkers.data = eventmarkers;
+    eventMarkers.data(eventmarkers);
     
     /*
     var MSFT = plot.candlestick(msftDataTable.mapAs({
